--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(mesh_simplify)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(mesh_simplify main.cpp Models/Vertex.h)
+add_executable(mesh_simplify main.cpp Models/Vertex.h Models/ObjFile.h)
